[package]
edition = "2021"
license = "MIT"
name = "blazing-fan-unit"
version = "0.1.0"

[dependencies]
embassy-embedded-hal = { version = "0.4.0", features = ["defmt"] }
embassy-executor = { version = "0.8.0", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.7.0", features = ["critical-section-impl", "defmt", "rp2040", "time-driver", "unstable-pac"] }
embassy-sync = { version = "0.7.1", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

emc2101 = { version = "1.0.0", features = ["async", "defmt-03"] }

assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }
byte-slice-cast = { version = "1.2.0", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
heapless = "0.8"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
smart-leds = "0.4.0"
static_cell = "2.1"

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "s"
